feat: [PIDM-1421] Update openapi after getReceiptPdf segregation
